--- a/images/demo-app/src/index.html
+++ b/images/demo-app/src/index.html
@@ -82,7 +82,7 @@
                     <use xlink:href="#exclamation-triangle-fill" />
                 </svg>
                 <div>
-                    You are not logged in! Please log in to continue.
+                    You are not logged in! Please log to send authenticated requests to your server.
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div id="__section-ping" class="col-lg-12 px-0 visually-hidden">
+        <div id="__section-ping" class="col-lg-12 px-0">
             <h3>Make a Call to the Server</h3>
             <div class="mb-3">
                 <p>
@@ -106,7 +106,7 @@
                 <button id="__btn-ping-public" class="btn btn-primary">
                     Call Public
                 </button>
-                <button id="__btn-ping-private" class="btn btn-primary">
+                <button id="__btn-ping-private" class="btn btn-primary disabled">
                     Call Private
                 </button>
             </div>
